--- a/index.html.html
+++ b/index.html.html
@@ -5,7 +5,7 @@
 <title>
     courses template
 </title>
-<link rel="stylesheet" href="final project css.css">
+<link rel="stylesheet" href="/porfolio/final project css.css">
     </head>
 <body>
     <div class="main">
@@ -16,7 +16,7 @@
     
 <a href="web development course" class="course">
     <div class="course-card" id="firstcourse">
-        <img src="web development course image.jpeg" alt="photo of web cpourse"
+        <img src="/porfolio/web development course image.jpeg" alt="photo of web cpourse"
         class="course-image">
         <div class="course-info">
             <h2 class="course-title"> web development basics</h2>
@@ -31,7 +31,7 @@
 </a>
 <a href="robotics course" class="course">
     <div class="course-card" id="secondcourse">
-        <img src="robotics course image.png" alt="photo of robotics course"
+        <img src="/porfolio/robotics course image.png" alt="photo of robotics course"
         class="course-image">
         <div class="course-info">
             <h2 class="course-title"> robotics course</h2>
@@ -45,8 +45,8 @@
     </div>
 </a>
 <a href="AI course" class=" course">
-    <div class=" course-card" id="thirdcourse">
-        <img src="AI course image.jpeg" alt="photo of AI cpourse"
+    <div class="course-card" id="thirdcourse">
+        <img src="/porfolio/AI course image.jpeg" alt="photo of AI cpourse"
         class="course-image">
         <div class="course-info">
             <h2 class="course-title"> AI intro</h2>
@@ -63,6 +63,6 @@
  <div class="button">
         <button id="reset-button"> reset to default</button>
     </div>
-<script src="final project js.js"></script>
+<script src="/porfolio/final project js.js"></script>
 </body>
 </html>
