--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     
 <a href="web development course" class="course">
     <div class="course-card" id="firstcourse">
-        <img src="web-development course image.jpeg" alt="photo of web cpourse"
+        <img src="web development course image.jpeg" alt="photo of web course"
         class="course-image">
         <div class="course-info">
             <h2 class="course-title"> web development basics</h2>
